// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array component #renderItem should render item at given index 1`] = `
<Widget
  description="My array description"
  errorMessage="This array is not correct"
  id="talend-array-1"
  isValid={true}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  schema={
    {
      "items": [
        {
          "key": [
            "comments",
            1,
            "name",
          ],
          "required": true,
          "schema": {
            "title": "Name",
            "type": "string",
          },
          "title": "Name",
          "type": "text",
        },
        {
          "description": "Email will be used for evil.",
          "key": [
            "comments",
            1,
            "email",
          ],
          "schema": {
            "description": "Email will be used for evil.",
            "pattern": "^\\S+@\\S+$",
            "title": "Email",
            "type": "string",
          },
          "title": "Email",
          "type": "text",
        },
        {
          "key": [
            "comments",
            1,
            "comment",
          ],
          "maxlength": 20,
          "rows": 3,
          "schema": {
            "maxLength": 20,
            "title": "Comment",
            "type": "string",
            "validationMessage": "Don't be greedy!",
          },
          "title": "Comment",
          "type": "textarea",
          "validationMessage": "Don't be greedy!",
        },
      ],
      "key": [
        "comments",
        1,
      ],
      "title": undefined,
      "widget": "fieldset",
    }
  }
  templates={{}}
  value={
    {
      "comment": "Let's do that instead",
      "email": "jm@lol.com",
      "name": "JM",
    }
  }
  widgets={{}}
/>
`;

exports[`Array component should render array 1`] = `
<DefaultArrayTemplate
  canReorder={true}
  description="My array description"
  errorMessage="This array is not correct"
  id="talend-array"
  isCloseable={false}
  isValid={true}
  onAdd={[Function]}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  onRemove={[Function]}
  onReorder={[Function]}
  renderItem={[Function]}
  schema={
    {
      "items": [
        {
          "key": [
            "comments",
            "",
            "name",
          ],
          "required": true,
          "schema": {
            "title": "Name",
            "type": "string",
          },
          "title": "Name",
          "type": "text",
        },
        {
          "description": "Email will be used for evil.",
          "key": [
            "comments",
            "",
            "email",
          ],
          "schema": {
            "description": "Email will be used for evil.",
            "pattern": "^\\S+@\\S+$",
            "title": "Email",
            "type": "string",
          },
          "title": "Email",
          "type": "text",
        },
        {
          "key": [
            "comments",
            "",
            "comment",
          ],
          "maxlength": 20,
          "rows": 3,
          "schema": {
            "maxLength": 20,
            "title": "Comment",
            "type": "string",
            "validationMessage": "Don't be greedy!",
          },
          "title": "Comment",
          "type": "textarea",
          "validationMessage": "Don't be greedy!",
        },
      ],
      "key": [
        "comments",
      ],
      "required": true,
      "schema": {
        "items": {
          "properties": {
            "comment": {
              "maxLength": 20,
              "title": "Comment",
              "type": "string",
              "validationMessage": "Don't be greedy!",
            },
            "email": {
              "description": "Email will be used for evil.",
              "pattern": "^\\S+@\\S+$",
              "title": "Email",
              "type": "string",
            },
            "name": {
              "title": "Name",
              "type": "string",
            },
          },
          "required": [
            "name",
            "comment",
          ],
          "type": "object",
        },
        "maxItems": 2,
        "type": "array",
      },
      "title": "comments",
      "type": "array",
    }
  }
  templates={{}}
  value={
    [
      {
        "comment": "Let's do this",
        "email": "jimmy@lol.com",
        "name": "Jimmy",
      },
      {
        "comment": "Let's do that instead",
        "email": "jm@lol.com",
        "name": "JM",
      },
      {
        "comment": "Don't user ternary !",
        "email": "geoffroy@lol.com",
        "name": "Goeffroy",
      },
    ]
  }
  widgets={{}}
/>
`;

exports[`Array component should render array that can't be reordered 1`] = `
<DefaultArrayTemplate
  canReorder={false}
  description="My array description"
  errorMessage="This array is not correct"
  id="talend-array"
  isCloseable={false}
  isValid={true}
  onAdd={[Function]}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  onRemove={[Function]}
  onReorder={[Function]}
  renderItem={[Function]}
  schema={
    {
      "items": [
        {
          "key": [
            "comments",
            "",
            "name",
          ],
          "required": true,
          "schema": {
            "title": "Name",
            "type": "string",
          },
          "title": "Name",
          "type": "text",
        },
        {
          "description": "Email will be used for evil.",
          "key": [
            "comments",
            "",
            "email",
          ],
          "schema": {
            "description": "Email will be used for evil.",
            "pattern": "^\\S+@\\S+$",
            "title": "Email",
            "type": "string",
          },
          "title": "Email",
          "type": "text",
        },
        {
          "key": [
            "comments",
            "",
            "comment",
          ],
          "maxlength": 20,
          "rows": 3,
          "schema": {
            "maxLength": 20,
            "title": "Comment",
            "type": "string",
            "validationMessage": "Don't be greedy!",
          },
          "title": "Comment",
          "type": "textarea",
          "validationMessage": "Don't be greedy!",
        },
      ],
      "key": [
        "comments",
      ],
      "reorder": false,
      "required": true,
      "schema": {
        "items": {
          "properties": {
            "comment": {
              "maxLength": 20,
              "title": "Comment",
              "type": "string",
              "validationMessage": "Don't be greedy!",
            },
            "email": {
              "description": "Email will be used for evil.",
              "pattern": "^\\S+@\\S+$",
              "title": "Email",
              "type": "string",
            },
            "name": {
              "title": "Name",
              "type": "string",
            },
          },
          "required": [
            "name",
            "comment",
          ],
          "type": "object",
        },
        "maxItems": 2,
        "type": "array",
      },
      "title": "comments",
      "type": "array",
    }
  }
  templates={{}}
  value={
    [
      {
        "comment": "Let's do this",
        "email": "jimmy@lol.com",
        "name": "Jimmy",
      },
      {
        "comment": "Let's do that instead",
        "email": "jm@lol.com",
        "name": "JM",
      },
      {
        "comment": "Don't user ternary !",
        "email": "geoffroy@lol.com",
        "name": "Goeffroy",
      },
    ]
  }
  widgets={{}}
/>
`;
